--- a/app/globals.css
+++ b/app/globals.css
@@ -2,28 +2,149 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 236, 236, 235;
+  --background-end-rgb: 242, 243, 242;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  font-family: 'Inter', sans-serif;
+  line-height: 1.5;
+}
+
+.min-width-600 {
+  min-width: 600px;
+
+  @media screen and (max-width: 768px) {
+    min-width: 100%;
+  }
+}
+
+.match-shadow {
+  box-shadow: 0 0 2px 0 rgba(48, 48, 48, 0.1), 0 4px 4px 0 rgba(48, 48, 48, 0.1);
+}
+
+.border-bottom {
+  border-bottom: 2px solid rgba(48, 48, 48, 0.1);
+}
+
+.match-status {
+  background-color: #fdeaec;
+  color: #d72641;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 6px;
+    height: 6px;
+    background-color: currentColor;
+    border-radius: 50%;
+    margin-right: 8px;
+  }
+}
+
+.btn-icon {
+  color: #dbdade;
+}
+
+.column {
+  padding: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: calc(100% / 3);
+}
+
+.team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team-logo {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 4px 4px 0 rgba(48, 48, 48, 0.15), 0 0 0 15px #f3f5f9;
+
+  img {
+    width: 50px;
+  }
+}
+
+.team-name {
+  text-align: center;
+  margin-top: 24px;
+  font-size: 18px;
+  font-weight: 600;
+
+  @media screen and (max-width: 768px) {
+    font-size: 14px;
+  }
+}
+
+.match-date,
+.match-referee {
+  font-size: 10px;
+  color: #8a8f98;
+
+  strong {
+    color: #1c2a38;
+  }
+
+  @media screen and (max-width: 768px) {
+    font-size: 9px;
+  }
+}
+
+.match-score-number {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 1;
+
+  @media screen and (max-width: 768px) {
+    font-size: 42px;
+  }
+}
+
+.leading {
+  color: #623ce6;
+}
+
+.match-score-divider {
+  color: #dbdade;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.match-time-lapsed {
+  font-size: 12px;
+  color: #df9443;
+
+  @media screen and (max-width: 768px) {
+    font-size: 10px;
+  }
 }
 
 @layer utilities {
